experiments/training/v6/minimal_defense/dqn/README.md
# Experiment `minimal_defense-v6`_`dqn`

This is an experiment in the `minimal_defense-v6` environment. 
An environment where the defender is following the `defend_minimal` defense policy. 
The `defend_minimal` policy entails that the defender will always 
defend the attribute with the minimal value out of all of its neighbors.
 
This experiment trains an attacker agent using the DQN algorithm to act optimally in the given
environment and defeat the defender.

The network configuration of the environment is as follows:

- `num_layers=4` (number of layers between the start and end nodes)
- `num_servers_per_layer=5`
- `num_attack_types=10`
- `max_value=9`  
- `connected_layers = True`

<p align="center">
<img src="docs/env.png" width="700">
</p>

The starting state for each node in the environment is initialized as follows (with some randomness for where the vulnerabilities are placed).

- `defense_val=2`
- `attack_val=0`
- `num_vulnerabilities_per_node=1` (which type of defense at the node that is vulnerable is selected randomly when the environment is initialized)
- `det_val=2`
- `vulnerability_val=0`
- `num_vulnerabilities_per_layer=2` 

The environment has dense rewards (+1,-1 given whenever the attacker reaches a new level in the network)
 The environment is partially observed (attacker can only see attack attributes of neighboring nodes, defender can only see defense attributes).

## Environment 

- Env: `minimal_defense-v6`

## Algorithm

- DQN with linear exploration annealing 
 
## Instructions 

To configure the experiment use the `config.json` file. Alternatively, 
it is also possible to delete the config file and edit the configuration directly in
`run.py` (this will cause the configuration to be overridden on the next run). 

Example configuration in `config.json`:

```json
{
    "attacker_type": 6,
    "defender_type": 1,
    "env_name": "idsgame-minimal_defense-v6",
    "idsgame_config": null,
    "initial_state_path": null,
    "logger": null,
    "mode": 0,
    "output_dir": "/home/kim/storage/workspace/gym-idsgame/experiments/training/v6/minimal_defense/dqn",
    "py/object": "gym_idsgame.config.client_config.ClientConfig",
    "q_agent_config": {
        "alpha": 1e-05,
        "attacker": true,
        "attacker_load_path": null,
        "checkpoint_freq": 10000,
        "defender": false,
        "defender_load_path": null,
        "dqn_config": {
            "batch_size": 32,
            "gpu": true,
            "hidden_activation": "ReLU",
            "hidden_dim": 64,
            "input_dim": 242,
            "loss_fn": "Huber",
            "lr_decay_rate": 0.99995,
            "lr_exp_decay": true,
            "num_hidden_layers": 1,
            "optimizer": "Adam",
            "output_dim": 220,
            "py/object": "gym_idsgame.agents.q_learning.dqn.dqn_config.DQNConfig",
            "replay_memory_size": 10000,
            "replay_start_size": 1000,
            "target_network_update_freq": 5000,
            "tensorboard": true,
            "tensorboard_dir": "/home/kim/storage/workspace/gym-idsgame/experiments/training/v6/minimal_defense/dqn/tensorboard"
        },
        "epsilon": 0.75,
        "epsilon_decay": 0.99995,
        "eval_episodes": 100,
        "eval_frequency": 5000,
        "eval_log_frequency": 1,
        "eval_render": false,
        "eval_sleep": 0.9,
        "gamma": 1,
        "gif_dir": "/home/kim/storage/workspace/gym-idsgame/experiments/training/v6/minimal_defense/dqn/gifs",
        "gifs": true,
        "logger": null,
        "min_epsilon": 0.05,
        "num_episodes": 500000,
        "py/object": "gym_idsgame.agents.q_learning.q_agent_config.QAgentConfig",
        "render": false,
        "save_dir": "/home/kim/storage/workspace/gym-idsgame/experiments/training/v6/minimal_defense/dqn/data",
        "train_log_frequency": 100,
        "video": true,
        "video_dir": "/home/kim/storage/workspace/gym-idsgame/experiments/training/v6/minimal_defense/dqn/videos",
        "video_fps": 5,
        "video_frequency": 101
    },
    "simulation_config": null,
    "title": "TrainingDQNAgent vs DefendMinimalDefender"
}
```

Example configuration in `run.py`:

```python
dqn_config = DQNConfig(input_dim=242, output_dim=220, hidden_dim=64, replay_memory_size=10000,
                           num_hidden_layers=1,
                           replay_start_size=1000, batch_size=32, target_network_update_freq=5000,
                           gpu=True, tensorboard=True, tensorboard_dir=default_output_dir() + "/tensorboard",
                           loss_fn="Huber", optimizer="Adam", lr_exp_decay=True, lr_decay_rate=0.99995)

q_agent_config = QAgentConfig(gamma=1, alpha=0.00001, epsilon=0.75, render=False, eval_sleep=0.9,
                              min_epsilon=0.05, eval_episodes=100, train_log_frequency=100,
                              epsilon_decay=0.99995, video=True, eval_log_frequency=1,
                              video_fps=5, video_dir=default_output_dir() + "/videos", num_episodes=500000,
                              eval_render=False, gifs=True, gif_dir=default_output_dir() + "/gifs",
                              eval_frequency=5000, attacker=True, defender=False, video_frequency=101,
                              save_dir=default_output_dir() + "/data", dqn_config=dqn_config,
                              checkpoint_freq=10000)
env_name = "idsgame-minimal_defense-v6"
client_config = ClientConfig(env_name=env_name, attacker_type=AgentType.DQN_AGENT.value,
                             mode=RunnerMode.TRAIN_ATTACKER.value,
                             q_agent_config=q_agent_config, output_dir=default_output_dir(),
                             title="TrainingDQNAgent vs DefendMinimalDefender")
```

After the experiment has finished, the results are written to the following sub-directories:

- **/data**: CSV file with metrics per episode for train and eval, e.g. `avg_episode_rewards`, `avg_episode_steps`, etc.
- **/gifs**: If the gif configuration-flag is set to true, the experiment will render the game during evaluation and save gif files to this directory. You can control the frequency of evaluation with the configuration parameter `eval_frequency` and the frequency of video/gif recording during evaluation with the parameter `video_frequency`
- **/hyperparameters**: CSV file with hyperparameters for the experiment.
- **/logs**: Log files from the experiment
- **/plots**: Basic plots of the results
- **/videos**: If the video configuration-flag is set to true, the experiment will render the game during evaluation and save video files to this directory. You can control the frequency of evaluation with the configuration parameter `eval_frequency` and the frequency of video/gif recording during evaluation with the parameter `video_frequency`
  

## Example Results

### Hack probability

#### Train

<p align="center">
<img src="docs/hack_probability_train.png" width="800">
</p>

#### Eval

<p align="center">
<img src="docs/hack_probability_eval.png" width="800">
</p>

### Episode lengths

#### Train
<p align="center">
<img src="docs/avg_episode_lengths_train.png" width="800">
</p>

#### Eval

<p align="center">
<img src="docs/avg_episode_lengths_eval.png" width="800">
</p>

### Exploration Rate

<p align="center">
<img src="docs/epsilon_train.png" width="800">
</p>

### Cumulative Rewards

#### Attacker (Train)
<p align="center">
<img src="docs/attacker_cumulative_reward_train.png" width="800">
</p>

#### Defender (Train)
<p align="center">
<img src="docs/defender_cumulative_reward_train.png" width="800">
</p>

### Loss

#### Attacker (Train)
<p align="center">
<img src="docs/avg_episode_loss_attacker_train.png" width="800">
</p>

### Learning Rate Decay

#### Attacker (Train)
<p align="center">
<img src="docs/lr_train.png" width="800">
</p>

### Policy Inspection

#### Evaluation after 0 Training Episodes

<p align="center">
<img src="docs/episode_0.gif" width="700">
</p> 

#### Evaluation after 5000 Training Episodes

<p align="center">
<img src="docs/episode_5000.gif" width="700">
</p>  

#### Evaluation after 50000 Training Episodes

<p align="center">
<img src="docs/episode_50000.gif" width="700">
</p>  

## Commands

Below is a list of commands for running the experiment

### Run

**Option 1**:
```bash
./run.sh
```

**Option 2**:
```bash
make all
```

**Option 3**:
```bash
python run.py
```

### Run Server (Without Display)

**Option 1**:
```bash
./run_server.sh
```

**Option 2**:
```bash
make run_server
```

### Clean

```bash
make clean
```

### Tensorboard

```
tensorboard --logdir=tensorboard
```

or: 

```
make tensorboard
```